Fix: align "Add exchange" button

--- a/app/assets/stylesheets/pages/_exchanges.scss
+++ b/app/assets/stylesheets/pages/_exchanges.scss
@@ -13,4 +13,10 @@
     }
   }
 
+  &.index {
+    h2 { display: block; float: left; width: 50%; margin: 1em 0 0 0; }
+    .actions { float: right; width: 50%; text-align: right; padding-top: 2em; }
+    table { margin-top: 1em; }
+  }
+
 }
